@@ -23,6 +23,9 @@ Changes in @NEW@:
       local system. (CNY-571)
     * Fixed a bug that could allow conary to consider a noop update as an
       install (and could result in tracebacks in some situations). (CNY-845)
+    * If you've made a local modification to a package and then try to
+      downgrade it later, conary will downgrade included components as well.
+      (CNY-805)
 
 Changes in 1.0.30:
   o System Update Changes:
